# parcel-tracking-reminder

./: .gitignore  README.md  docker-compose-dev.yml  docker-compose-prd.yml  run-dev-compose.sh  run-prd-compose.sh
backend-api/: Dockerfile  DockerfileProd  pom.xml
backend-api/src/main/proto/: accounts.proto  parcels.proto
backend-api/src/main/resources/: application.properties
certs/: generate-certs.sh  server-cert.pem  server-key.pem
consumer-go/: Makefile  go.mod  go.sum  main.go
consumer-go/internal/: job.go  job_test.go  parcelGrpcService.go  parcelGrpcService_test.go  service.go
consumer-go/internal/common/accounts/: accounts.pb.go  accounts_grpc.pb.go
consumer-go/internal/common/parcels/: parcels.pb.go  parcels_grpc.pb.go
discord-bot/: Cargo.toml  build.rs
discord-bot/proto/: notification.proto
discord-bot/src/: main.rs  notification.rs  parcels.rs
docker/go-service/: Dockerfile  Dockerfile.dev  go.mod  go.sum  main.go
docker/go-service/internal/: config.go  job.go  job_test.go  parcelGrpcService.go  parcelGrpcService_test.go
docker/go-service/internal/common/accounts/: accounts.pb.go
docker/go-service/resources/: config.json
docker/java-service/: Dockerfile  Dockerfile.dev  pom.xml
docker/rust-service/: Cargo.toml  Dockerfile  Dockerfile.dev  build.rs
docker/rust-service/proto/: notification.proto
docker/rust-service/src/: notification_server.rs
docker/scripts/: wait-for-it.sh
parcels-api/: go.mod  main.go
parcels-api/handler/: handler.go  parcelsHandler.go
parcels-api/service/: parcels.go
(+53 files in other folders)
